force-app/main/default/objects/Dice_Roll__c/Dice_Roll__c.object-meta.xml
<CustomObject>
    <description
  >Roll dice like a pro. Capture each throw, sides, modifier, crits, and totals for quick replays and bragging rights.</description>
    <label>Dice Roll</label>
    <nameField>
        <displayFormat>DR-{000000000}</displayFormat>
        <label>Dice Roll Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dice Rolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>