force-app/main/default/objects/Dice_Roll__c/fields/Dice_Notation__c.field-meta.xml
<CustomField>
    <fullName>Dice_Notation__c</fullName>
    <description
  >Human friendly format for the roll, for example 3d6+2.</description>
    <formula>TEXT(Number_of_Dice__c) &amp;
&quot;d&quot; &amp;
TEXT(Sides__c) &amp;
IF(
  OR(ISBLANK(Modifier__c), Modifier__c = 0),
  &quot;&quot;,
  IF(Modifier__c &gt; 0, &quot;+&quot; &amp; TEXT(Modifier__c), TEXT(Modifier__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Human friendly format for the roll, for example 3d6+2 or 2d20-6.</inlineHelpText>
    <label>Dice Notation</label>
    <type>Text</type>
</CustomField>