force-app/main/default/objects/Dice_Roll__c/fields/Had_Critical__c.field-meta.xml
<CustomField>
    <fullName>Had_Critical__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True if any die hit the maximum face value for the chosen sides.</description>
    <inlineHelpText
  >True if any die hit the maximum face value for the chosen sides.</inlineHelpText>
    <label>Had Critical</label>
    <type>Checkbox</type>
</CustomField>