force-app/main/default/objects/Dice_Roll__c/fields/Modifier__c.field-meta.xml
<CustomField>
    <fullName>Modifier__c</fullName>
    <defaultValue>0</defaultValue>
    <description
  >Bonus or penalty applied to the roll total. Accepts negative or positive integers.</description>
    <inlineHelpText
  >Bonus or penalty applied to the roll total. Accepts negative or positive integers.</inlineHelpText>
    <label>Modifier</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>