force-app/main/default/objects/Dice_Roll__c/fields/Number_of_Dice__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Dice__c</fullName>
    <defaultValue>1</defaultValue>
    <description
  >How many dice you throw in this roll. Allowed range 1 to 100.</description>
    <inlineHelpText
  >How many dice you throw in this roll. Allowed range 1 to 100.</inlineHelpText>
    <label>Number of Dice</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>