force-app/main/default/objects/Dice_Roll__c/fields/Results_JSON__c.field-meta.xml
<CustomField>
    <fullName>Results_JSON__c</fullName>
    <description>Raw results of each die in order as JSON, for example [4, 6, 1].</description>
    <inlineHelpText>Raw results of each die in order as JSON, for example [4, 6, 1].</inlineHelpText>
    <label>Results JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>