force-app/main/default/objects/Dice_Roll__c/fields/Roller__c.field-meta.xml
<CustomField>
    <fullName>Roller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The adventurer behind the roll. Set a teammate, a bot, or keep it as the creator.</description>
    <inlineHelpText>The adventurer behind the roll. Set a teammate, a bot, or keep it as the creator.</inlineHelpText>
    <label>Roller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dice_Rolls</relationshipName>
    <type>Lookup</type>
</CustomField>