force-app/main/default/objects/Dice_Roll__c/fields/Sides__c.field-meta.xml
<CustomField>
    <fullName>Sides__c</fullName>
    <defaultValue>TEXT(20)</defaultValue>
    <description>Faces on each die. Choose 4, 6, 8, 10, 12, or 20.</description>
    <inlineHelpText>Faces on each die. Choose 4, 6, 8, 10, 12, or 20.</inlineHelpText>
    <label>Sides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>