force-app/main/default/objects/Dice_Roll__c/fields/Sum_of_Dice__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Dice__c</fullName>
    <description>Sum of all dice before any modifier.</description>
    <inlineHelpText>Sum of all dice before any modifier.</inlineHelpText>
    <label>Sum of Dice</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>