force-app/main/default/objects/Dice_Roll__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Final score. Sum of Dice plus Modifier.</description>
    <formula>Sum_of_Dice__c +  Modifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Final score. Sum of Dice plus Modifier.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>