force-app/main/default/objects/Dice_Roll__c/listViews/All_Rolls.listView-meta.xml
<ListView>
    <fullName>All_Rolls</fullName>
    <columns>NAME</columns>
    <columns>Total__c</columns>
    <columns>Had_Critical__c</columns>
    <columns>Dice_Notation__c</columns>
    <columns>Number_of_Dice__c</columns>
    <columns>Sides__c</columns>
    <columns>Modifier__c</columns>
    <columns>Sum_of_Dice__c</columns>
    <columns>Results_JSON__c</columns>
    <columns>Roller__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Rolls</label>
</ListView>